02-Types/examples/type-errors/cpp/string_eq.cpp
#include <iostream>

int main(int argc, char* argv[])
{
  std::cout << "\"4\" == \"4\" :: " << ("4" == "4") << "\n";
  return 0;
}
